# minipilot

./: .gitignore  .gitmodules  CMakeLists.txt  Overview.md  README.md  test.cpp  todo
docs/: Overview.md
docs/dynamics/: Copter.md  State.md
gcs/: commands.py  pb  telemetry.py  telemetry_gui.py
include/minipilot/: mp_main.hpp
include/mp/: main.hpp  state_estimators.hpp  vehicles.hpp
include/mp/dynamics/: model.hpp  state.hpp
include/mp/dynamics/copter/: copter.hpp  quadcopter.hpp
include/mp/util/: constants.hpp
include/mp/vehicles/: ekf_vehicle.hpp  model.hpp  state.hpp  vehicle.hpp
include/mp/vehicles/copter/: copter.hpp  quadcopter.hpp
include/mp/vehicles/copter/control/: copter_controller.hpp  copter_controller_pid.hpp
lib/: emblib  emblibcpp
protobuf/: CMakeLists.txt  Makefile  log.proto  telemetry.proto
protobuf/src/: command.proto  config.proto  log.proto  telemetry.proto  types.proto
protobuf/src/vehicles/: copter_command.proto  copter_telemetry.proto
python/: copter.ipynb  model.py  requirements.txt  state_est.ipynb
src/: emblib_config.hpp  main.cpp  mp_config.hpp  mp_main.cpp
src/dynamics/: model.hpp  state.hpp
src/dynamics/copter/: copter.cpp  copter.hpp  quadcopter.cpp  quadcopter.hpp
src/state/: ekf_ahrs.cpp  ekf_ahrs.hpp  ekf_inertial.cpp  ekf_inertial.hpp  state_estimator.hpp
src/tasks/: task_accelerometer.cpp  task_accelerometer.hpp  task_config.hpp  task_gyroscope.cpp  task_gyroscope.hpp  task_logger.cpp  task_logger.hpp  task_receiver.cpp  task_receiver.hpp  task_state_estimator.cpp  task_state_estimator.hpp  task_telemetry.cpp  task_telemetry.hpp  task_three_axis_sensor.hpp  task_vehicle.cpp  task_vehicle.hpp
src/util/: actuators.hpp  config.cpp  config.hpp  logger.cpp  logger.hpp  math.hpp  pb_types.hpp
src/vehicles/: ekf_vehicle.hpp  state.hpp  vehicle.hpp
src/vehicles/copter/: copter.cpp  copter.hpp  quadcopter.cpp  quadcopter.hpp
src/vehicles/copter/control/: copter_controller.hpp  copter_controller_pid.cpp  copter_controller_pid.hpp
test/: CMakeLists.txt  test.cpp
test/drivers/: dummy_accel.hpp
